<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginUser" >

    <TextView
        android:id="@+id/nametxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nametxt" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/nametxt"
        android:ems="10"
        android:hint="@string/name" />
    
    <TextView android:id="@+id/gendertxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
     	android:text="@string/gendertxt" />
    <Spinner
            android:id="@+id/spinner_gender"
           	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/gender_array"
            android:prompt="@string/gender_select" 
            android:layout_below="@+id/gendertxt" />

    <TextView
        android:id="@+id/emailtxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_gender"
        android:text="@string/emailtxt" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/emailtxt"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/user1txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/usertext" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/user1txt"
        android:ems="10"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/pass1txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:text="@string/passtext" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pass1txt"
        android:ems="10"
        android:hint="@string/password_edit"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/citytxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:text="@string/city" />

    <Spinner
        android:id="@+id/spinner_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/citytxt"
        android:entries="@array/city_array"
        android:prompt="@string/city_select" />

    <TextView
        android:id="@+id/neighbor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_city"
        android:text="@string/neighbor" />

    <Spinner
        android:id="@+id/spinner_neighbor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/neighbor"
        android:entries="@array/neighbor_array"
        android:prompt="@string/neighbor_select" />

    <TextView
        android:id="@+id/birthdaytxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_neighbor"
        android:text="@string/birthdaytxt" />
   


 
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/birthdaytxt"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/signup_send"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/signup_send"
        android:layout_width="112dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/save" 
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:background="#009933"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signup_send"
        android:layout_alignBottom="@+id/signup_send"
        android:layout_marginRight="44dp"
        android:layout_toLeftOf="@+id/signup_send"
        android:background="#FFFFFF"
        android:drawableBottom="@drawable/event_icon"
        android:onClick="showDatePickerDialog" />

</RelativeLayout>