<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Modify" >

    <TextView
        android:id="@+id/mnametxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nametxt" />

    <EditText
        android:id="@+id/mname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/mnametxt"
        android:ems="10"
        android:hint="@string/name" />
    
    <TextView android:id="@+id/mgendertxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mname"
     	android:text="@string/gendertxt" />
    <Spinner
            android:id="@+id/mspinner_gender"
           	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/gender_array"
            android:prompt="@string/gender_select" 
            android:layout_below="@+id/mgendertxt" />

    <TextView
        android:id="@+id/memailtxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mspinner_gender"
        android:text="@string/emailtxt" />

    <EditText
        android:id="@+id/memail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/memailtxt"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/muser1txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/memail"
        android:text="@string/usertext" />

    <EditText
        android:id="@+id/medit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/muser1txt"
        android:ems="10"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/mpass1txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/medit_username"
        android:text="@string/passtext" />

    <EditText
        android:id="@+id/medit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/mpass1txt"
        android:ems="10"
        android:hint="@string/password_edit"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/mcitytxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/medit_password"
        android:text="@string/city" />

    <Spinner
        android:id="@+id/mspinner_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/mcitytxt"
        android:entries="@array/city_array"
        android:prompt="@string/city_select" />

    <TextView
        android:id="@+id/mneighbor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mspinner_city"
        android:text="@string/neighbor" />

    <Spinner
        android:id="@+id/mspinner_neighbor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mneighbor"
        android:entries="@array/neighbor_array"
        android:prompt="@string/neighbor_select" />

    <TextView
        android:id="@+id/mbirthdaytxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mspinner_neighbor"
        android:text="@string/birthdaytxt" />

    <Button
        android:id="@+id/mbutton1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/meditText1"
        android:layout_marginRight="44dp"
        android:layout_toLeftOf="@+id/msave"
        android:background="#FFFFFF"
        android:drawableBottom="@drawable/event_icon"
        android:onClick="showDatePickerDialog" />

    <EditText
        android:id="@+id/meditText1"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/mbirthdaytxt"
        android:layout_alignTop="@+id/mbirthdaytxt"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/msave"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/mbutton1"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/button_cancel"
        android:background="#009933"
        android:drawableLeft="@drawable/save"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/mspinner_neighbor"
        android:layout_alignTop="@+id/msave"
        android:background="#009933"
        android:drawableStart="@drawable/cross_icon"
        android:textColor="#FFFFFF" />

</RelativeLayout>