<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/contact_green" />

    <EditText
        android:id="@+id/name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_profile"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView2"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_profile"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/nametxt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/city_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/gender_profile"
        android:layout_alignRight="@+id/gender_profile"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth_profile"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/user_profile"
        android:background="#009933"
        android:text="@string/hom"
        android:textColor="#FFFFFF"
        android:drawableLeft="@drawable/home_button" />

    <Button
        android:id="@+id/button_modify"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_home"
        android:layout_alignBottom="@+id/button_home"
        android:layout_alignRight="@+id/city_profile"
        android:layout_marginRight="24dp"
        android:background="#009933"
        android:text="@string/modif"
        android:textColor="#FFFFFF" 
        android:drawableLeft="@drawable/pencil"/>

    <EditText
        android:id="@+id/gender_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/email_profile"
        android:layout_alignRight="@+id/email_profile"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_profile"
        android:layout_alignRight="@+id/name_profile"
        android:layout_below="@+id/name_profile"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginBottom="12dp"
        android:layout_toRightOf="@+id/imageView1"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold" 
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/neighbor_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignLeft="@+id/birth_profile"
        android:layout_alignRight="@+id/city_profile"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/city_profile"
        android:layout_marginTop="32dp"
        android:text="@string/neighbor"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_profile"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/emailtxt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/gender_profile"
        android:text="@string/gendertxt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="23dp"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="25dp"
        android:text="@string/birthdaytxt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/birth_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_alignRight="@+id/city_profile"
        android:layout_toRightOf="@+id/TextView03"
        android:ems="10"
        android:inputType="date" 
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

   
</RelativeLayout>